syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SensorData.Core.Proto";

service SensorDataGrpc {
  // Commands (Create, Update, Delete, etc)
  rpc CreateReading (CreateReadingRequest) returns (google.protobuf.Empty);
  rpc UpdateReading (UpdateReadingRequest) returns (google.protobuf.Empty);

  rpc DeleteReading (DeleteReadingRequest) returns (google.protobuf.Empty);
  rpc DeleteManyReadings (DeleteManyReadingsRequest) returns (google.protobuf.Empty);

  rpc SaveReadingsFromCsv (stream SaveReadingsFromCsvRequest) returns (google.protobuf.Empty);

  // Queries (Read)
  rpc GetFirstRecentFromSensor (GetFirstRecentFromSensorRequest) returns (ReadingDto);

  rpc GetAllFromSensor (GetAllFromSensorRequest) returns (GetManyFromSensorResponse);

  rpc GetLastFromSensor (GetLastFromSensorRequest) returns (GetManyFromSensorResponse);

  rpc GetRangeFromSensor (GetRangeFromSensorRequest) returns (GetManyFromSensorResponse);

  rpc CalculateStat1DForSensor (CalculateStat1DForSensorRequest) returns (Stat1DBucketResponse);

  rpc GetRangeFromSensorAsFile (GetRangeFromSensorAsFileRequest) returns (stream GetRangeFromSensorFileChunk);
}


message ReadingDto {
  google.protobuf.Timestamp Time = 1;
  int32 SensorId = 2;
  double Value = 3;
}

message ReadingNoSensorDto {
  google.protobuf.Timestamp Time = 1;
  double Value = 2;
}

enum StatFunction1D {
  AVERAGE = 0;
  MIN = 1;
  MAX = 2;
  STANDARD_DEVIATION = 3;
  VARIANCE = 4;
  HISTOGRAM = 5;
  SUM = 6;
  NUMBER_OF_VALUES = 7;
}

enum StatFunction2D {
  AVERAGE_X = 0;
  AVERAGE_Y = 1;
  CORRELATION = 2;
  COVARIANCE = 3;
  INTERCEPT = 4;
  SLOPE = 5;
}

message Stat1DBucketRowDto {
  google.protobuf.Timestamp TimeBucket = 1;
  repeated double Values = 2;
}

message Stat2DBucketRowDto {
  google.protobuf.Timestamp TimeBucket = 1;
  repeated double Values = 2;
}

message PaginationMetaData {
  int32 TotalCount = 1;
  int32 PageSize = 2;
  int32 CurrentPage = 3;
  int32 TotalPages = 4;
  bool HasNext = 5;
  bool HasPrevious = 6;
}

message Stat1DBucketResponse {
  repeated int32 SensorIds = 1;
  int32 SensorTypeId = 2;
  repeated StatFunction1D StatFunctions = 3;
  repeated Stat1DBucketRowDto Data = 4;
}
message Stat2DBucketResponse {
  repeated int32 XSensorIds = 1;
  repeated int32 YSensorIds = 2;
  int32 XSensorTypeId = 3;
  int32 YSensorTypeId = 4;
  repeated StatFunction2D StatFunctions = 5;
  repeated Stat2DBucketRowDto Data = 6;
}

message DeviceAndSensorName {
  int32 DeviceId = 1;
  string SensorName = 2;
}

message CreateReadingRequest {
  google.protobuf.Timestamp Time = 1;
  double Value = 2;
  oneof Source {
    DeviceAndSensorName DeviceAndName = 3;
    int32 SensorId = 4;
  }
}

message UpdateReadingRequest {
  google.protobuf.Timestamp Time = 1;
  double Value = 3;
  int32 SensorId = 4;
}

message DeleteReadingRequest {
  google.protobuf.Timestamp Time = 1;
  int32 SensorId = 2;
}

message DeleteManyReadingsRequest {
  repeated DeleteReadingRequest DeleteRequests = 1;
}

message SaveReadingsFromCsvRequest {

}

message GetFirstRecentFromSensorRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
}

message GetAllFromSensorRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
  int32 PageSize = 3;
  int32 PageNumber = 4;
}

message GetManyFromSensorResponse {
  int32 SensorId = 1;
  int32 SensorTypeId = 2;
  PaginationMetaData PaginationMetaData = 3;
  repeated ReadingNoSensorDto Readings = 4;
}

enum TimeUnit {
  SECOND = 0;
  MINUTE = 1;
  HOUR = 2;
  DAY = 3;
}

message GetLastFromSensorRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
  int32 PageSize = 3;
  int32 PageNumber = 4;
  TimeUnit TimeUnit = 5;
  int32 TimeUnitValue = 6;
}

message GetRangeFromSensorRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
  int32 PageSize = 3;
  int32 PageNumber = 4;
  google.protobuf.Timestamp StartDate = 5;
  google.protobuf.Timestamp EndDate = 6;
}

message CalculateStat1DForSensorRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
  TimeUnit TimeBucketUnit = 3;
  int32 TimeBucketValue = 4;
  repeated StatFunction1D Functions = 5;

  int32 PageSize = 6;
  int32 PageNumber = 7;
}

enum FileType {
  CSV = 0;
  EXCEL = 1;
}

message  GetRangeFromSensorAsFileRequest {
  oneof Sensor {
    DeviceAndSensorName DeviceAndName = 1;
    int32 SensorId = 2;
  }
  google.protobuf.Timestamp StartDate = 3;
  google.protobuf.Timestamp EndDate = 4;

  FileType FileType = 5;
}

message GetRangeFromSensorFileChunk {
  bytes FileContent = 1;
  FileType FileType = 2;
  int32 ChunkNumber = 3;
}
